# Baduk

./: .gitignore  .replit  README.md  all.py  compile_scripts.py  pyproject.toml  requirements.txt  submitted.py
baduk/: __init__.py  __main__.py  constants.py  enums.py  exceptions.py  main.py  move_from_sgf.py  move_validation.py  player.py  point.py  turn.py
baduk/game/: board.py  (+6 more)
sgf/: 2ipk-gokifu-20160309-AlphaGo-Lee_Sedol.sgf  2ipv-gokifu-20160310-Lee_Sedol-AlphaGo.sgf  2iq8-gokifu-20160313-Lee_Sedol-Alphago.sgf  2vn2-gokifu-20180728-Lee_Jihyun-Lee_Donghoon.sgf  2vnj-gokifu-20180730-Yamashiro_Hiroshi-Yu_Zhengqi.sgf  2vnk-gokifu-20180730-Chang_Suyeong-Cho_Daehyeon.sgf  2vnl-gokifu-20180730-Park_Seungmun-Cho_Chikun.sgf  2vnm-gokifu-20180730-Park_Jungwhan-Wang_Yuanjun.sgf  2vnn-gokifu-20180730-Chang_Doojin-Kang_Hun_(s).sgf  2vnp-gokifu-20180731-Kim_Ilhwan-Seo_Nungwuk.sgf  2vnq-gokifu-20180729-Park_Minkyu-Byun_Sangil.sgf  2vnr-gokifu-20180729-Kim_Myounghoon-Lee_Yeongkyu.sgf  2vns-gokifu-20180729-Lee_Jihyun-Cho_Hanseung.sgf  2vnt-gokifu-20180729-Yun_Junsang-An_Hyungjoon.sgf  2vnu-gokifu-20180730-Byun_Sangil-Lee_Jihyun.sgf  2vnv-gokifu-20180729-Lee_Jihyun-Lee_Yeongkyu.sgf  2vnw-gokifu-20180729-Liao_Yuanhe-Park_Jungwhan.sgf  2vp2-gokifu-20180801-Mi_Yuting-Tong_Mengcheng.sgf  2vp3-gokifu-20180801-Yang_Dingxin-Tao_Xinran.sgf  2vp5-gokifu-20180801-Kim_Dongmyeon-Jimmy_Cha.sgf  2vp6-gokifu-20180801-Kim_Soojang-Kim_Chongsu.sgf  2vpc-gokifu-20180803-Yang_Dingxin-Mi_Yuting.sgf  2vpd-gokifu-20180802-Shibano_Toramaru-Ko_Iso.sgf  2vpe-gokifu-20180802-Kono_Rin-Yamashita_Keigo.sgf  (+82 more)
(+35 files in other folders)
