[tool.poetry]
name = "baduk"
version = "1.0.0"
description = "Python Baduk Game"
authors = ["Sarcoma <sarcoma@live.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ansi-colours = "0.2.6"
terminal-table = "0.3.1"
text-template = "0.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
